navbar overlap issue

--- a/client/src/components/Home/Home.scss
+++ b/client/src/components/Home/Home.scss
@@ -22,6 +22,7 @@ $default-margin: 15px 25px;
 
 .home-splash {
   background: url("/img/welcome-background.png") no-repeat center center fixed;
+  height: 70vh;
 }
 
 .cards-container {
