--- a/client/src/components/Splash/Splash.scss
+++ b/client/src/components/Splash/Splash.scss
@@ -1,6 +1,6 @@
 $small-font: 10pt;
 $medium-font: 16pt;
-$subheading-font: 50px;
+$subheading-font: 50pt;
 $heading-font: 100pt;
 $overlay-x: 350px;
 $overlay-y: 100px;
@@ -10,7 +10,6 @@ $overlay-y: 100px;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
-  height: 80vh;
   position: relative;
   text-align: center;
   color: white;
